immich/immich-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
spec:
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
      - name: immich-ml
        image: ghcr.io/immich-app/immich-machine-learning:v1.132.3
        volumeMounts:
          - name: model-cache
            mountPath: /cache
          - name: config
            mountPath: /config/immich-config.yaml
          - name: dev-dri
            mountPath: /dev/dri
        livenessProbe:
          httpGet:
            path: /ping
            port: 3003
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 3003
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /ping
            port: 3003
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 30
        securityContext:
          privileged: true
        resources:
          limits:
            memory: "8Gi"
            cpu: "2"
          requests:
            memory: "2Gi"
            cpu: "500m"
      volumes:
        - name: model-cache
          emptyDir:
            sizeLimit: 10Gi
        - name: config
          configMap:
            name: immich-config
        - name: dev-dri
          hostPath:
            path: /dev/dri
