immich/immich-server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server:v1.132.3
        volumeMounts:
          - name: library
            mountPath: /usr/src/app/upload
          - name: config
            mountPath: /config/immich-config.yaml
        livenessProbe:
          httpGet:
            path: /api/server/ping
            port: 2283
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/server/ping
            port: 2283
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /api/server/ping
            port: 2283
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 30
        resources:
          limits:
            memory: "8Gi"
            cpu: "2"
          requests:
            memory: "2Gi"
            cpu: "500m"
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library
        - name: config
          configMap:
            name: immich-config
