immich/immich-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  selector:
    app: immich-server
  ports:
  - port: 2283
    targetPort: 2283
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
spec:
  selector:
    app: immich-ml
  ports:
  - port: 3003
    targetPort: 3003
    name: http
